chore: remove all added comments from migration files